Creación de validaciones en formularios, mensajes de respuestas temporales

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -13,7 +13,8 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>test_flutter_angel_valdiviezo</string>
+	<!-- <string>test_flutter_angel_valdiviezo</string> -->
+	<string>Disruptive App</string>	
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
