--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,9 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  flutter_awesome_alert_box: ^2.1.1
+  fluttertoast: ^8.2.2
+  flutter_spinkit: ^5.2.0
   connectivity_plus: ^4.0.2
   package_info_plus: ^4.1.0
   local_auth: ^2.1.6
@@ -35,7 +38,7 @@ dependencies:
   flutter_bloc: ^8.1.3
   bloc: ^8.1.2
   http: ^1.1.0
-  flutter_secure_storage: ^8.0.0
+  flutter_secure_storage: ^9.0.0
   provider: ^6.0.5
   cached_network_image: ^3.3.1
   auto_size_text: ^3.0.0  
