--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,9 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  any_animated_button: ^0.0.4
+  pinch_zoom: ^1.0.0
+  flutter_staggered_grid_view: ^0.7.0
   flutter_awesome_alert_box: ^2.1.1
   fluttertoast: ^8.2.2
   flutter_spinkit: ^5.2.0
